--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
 
-    <string name="app_name">Calendar Widget</string>
-
+    <string name="app_name">A Calendar Widget</string>
+    <string name="previous_month">Preview month</string>
+    <string name="next_month">Next month</string>
 </resources>
