--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">A Calendar Widget</string>
     <string name="previous_month">Previous month</string>
     <string name="next_month">Next month</string>
+ 
+    <string name="monday">M</string>
+    <string name="tuesday">T</string>
+    <string name="wednesday">W</string>
+    <string name="thursday">T</string>
+    <string name="friday">F</string>
+    <string name="saturday">S</string>
+    <string name="sunday">S</string>
+    
 </resources>
