--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">Calendar Widget</string>
+    
     <string name="previous_month">Previous month</string>
     <string name="next_month">Next month</string>
- 
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Week days -->
     <string name="monday">M</string>
     <string name="tuesday">T</string>
     <string name="wednesday">W</string>
@@ -12,4 +16,23 @@
     <string name="saturday">S</string>
     <string name="sunday">S</string>
     
+    <!-- Text used in Settings. -->
+    <string name="font_color">Font color</string>
+    <string name="font_color_summary">Choose font color</string>
+    <string name="today_font_color">Today font color</string>
+    <string name="today_font_color_summary">Choose font color for today</string>
+    
+    <!-- A list of font color options used in Settings. -->
+    <string name="black">Black</string>
+    <string name="blue">Blue</string>
+    <string name="cyan">Cyan</string>
+    <string name="dkgray">Dark gray</string>
+    <string name="gray">Gray</string>
+    <string name="green">Green</string>
+    <string name="ltgray">Light gray</string>
+    <string name="magenta">Magenta</string>
+    <string name="red">Red</string>
+    <string name="white">White</string>
+    <string name="yellow">Yellow</string>
+
 </resources>
