--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,7 +5,6 @@
     
     <string name="previous_month">Previous month</string>
     <string name="next_month">Next month</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- Week days -->
     <string name="monday">M</string>
@@ -16,23 +15,8 @@
     <string name="saturday">S</string>
     <string name="sunday">S</string>
     
-    <!-- Text used in Settings. -->
-    <string name="font_color">Font color</string>
-    <string name="font_color_summary">Choose font color</string>
-    <string name="today_font_color">Today font color</string>
-    <string name="today_font_color_summary">Choose font color for today</string>
+    <!-- Used in Settings. -->
+    <string name="theme">Theme</string>
+    <string name="theme_summary">Choose a theme</string>
     
-    <!-- A list of font color options used in Settings. -->
-    <string name="black">Black</string>
-    <string name="blue">Blue</string>
-    <string name="cyan">Cyan</string>
-    <string name="dkgray">Dark gray</string>
-    <string name="gray">Gray</string>
-    <string name="green">Green</string>
-    <string name="ltgray">Light gray</string>
-    <string name="magenta">Magenta</string>
-    <string name="red">Red</string>
-    <string name="white">White</string>
-    <string name="yellow">Yellow</string>
-
 </resources>
