Make theme preference work by duplicating layout for 2 different themes. Fix a bug that the date is red even it's not in current month.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,6 +17,6 @@
     
     <!-- Used in Settings. -->
     <string name="theme">Theme</string>
-    <string name="theme_summary">Choose a theme</string>
+    <string name="theme_summary">Choose a dark theme or a light theme</string>
     
 </resources>
