--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,5 +18,7 @@
     <!-- Used in Settings. -->
     <string name="theme">Theme</string>
     <string name="theme_summary">Choose a dark theme or a light theme</string>
+    <string name="week_start_day">Week starts on</string>
+    <string name="week_start_day_summary">Sunday or Monday</string>
     
 </resources>
