--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="sunday">S</string>
     
     <!-- Used in Settings. -->
+    <string name="widget">Widget</string>
     <string name="theme">Theme</string>
     <string name="theme_summary">Choose a dark theme or a light theme</string>
     <string name="week_start_day">Week starts on</string>
