Add about section in settings. Preference summary shows current selection.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,20 +6,14 @@
     <string name="previous_month">Previous month</string>
     <string name="next_month">Next month</string>
 
-    <!-- Week days -->
-    <string name="monday">M</string>
-    <string name="tuesday">T</string>
-    <string name="wednesday">W</string>
-    <string name="thursday">T</string>
-    <string name="friday">F</string>
-    <string name="saturday">S</string>
-    <string name="sunday">S</string>
+    <string name="about">About</string>
+    <string name="version">Version</string>
+    <string name="license">License</string>
+    <string name="open_source">Open source</string>
     
     <!-- Used in Settings. -->
     <string name="widget">Widget</string>
     <string name="theme">Theme</string>
-    <string name="theme_summary">Choose a dark theme or a light theme</string>
     <string name="week_start_day">Week starts on</string>
-    <string name="week_start_day_summary">Sunday or Monday</string>
     
 </resources>
