Add date click action preferences. Implement date viewing.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="widget">Widget</string>
     <string name="theme">Theme</string>
     <string name="week_start_day">Week starts on</string>
+    <string name="on_day_click_action">On day click action</string>
 
     <string name="about">About</string>
     <string name="version">Version</string>
